added new types of load balance